--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body {
     background-attachment: fixed;
     background-image: url(/img/background-GRANDE.jpg);
     opacity: 0,2;
-    background-color: gray;
+    background-color: rgb(204, 201, 201);
 }
