--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     background-attachment: fixed;
-    background-image: url(/img/background-GRANDE.jpg);
-    opacity: 0,2;
     background-color: rgb(204, 201, 201);
     
+}
+
+.class {
+    opacity: 0,2;
+
 }
