--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-attachment: fixed;
     background-color: rgb(255, 255, 255);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
     
 }
 
