--- a/style.css
+++ b/style.css
@@ -3,8 +3,21 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: white;
     
+
     
 }
 
 
+a {
+    text-decoration: none;
+    color: dimgrey;
 
+}
+
+a:hover {
+    color: fuchsia;
+}
+
+a:active {
+    color: dimgray;
+}
