--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: white;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+color: dimgray;
+background-color: white;
     
 
     
