--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
     
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-colo
+
 background-color: white;
     
-
     
 }
 
@@ -27,4 +26,6 @@ footer {
     background-color: dimgray;
     color: white;
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
