--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     
 font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+color: dimgray;
 background-color: white;
     
 scrollbar-width: none;
