--- a/style.css
+++ b/style.css
@@ -35,6 +35,6 @@ footer {
 #menu-principal {
     background-color: #303331;
     color: white;
-    text-align: right;
+    text-align: left;
     padding: 50px;
 }
