--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ background-color: white;
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: dimgray;
     font-weight: bold;
     font-size: small;
+    align-items: left;
 }
 
 a:hover {
@@ -40,6 +41,7 @@ footer {
     font-weight: bold;
     font-size: small;
     align-items: center;
+    
     
 
 }
