--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ footer {
 }
 
 #menu-principal {
-    background-color: #ffffff;
+    background-color: #9DC31A;
     color: dimgray;
     padding: 40px;
     font-weight: bold;
