--- a/style.css
+++ b/style.css
@@ -36,11 +36,11 @@ footer {
 
 #menu-principal {
     background-color: #9DC31A;
-    color: dimgray;
+    color: ffffff;
     padding: 40px;
     font-weight: bold;
     font-size: small;
-    align-items: center;
+    
     
     
 
