--- a/style.css
+++ b/style.css
@@ -44,5 +44,6 @@ footer {
 }
 
 #capa {
-    img: url(img/workspace-1280538_19200-PEQUENA.jpg)
+ 
+    background: url(img/workspace-1280538_19200-PEQUENA.jpg);
 }
