--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ footer {
 
 }
 
+#home {
+    background: #9DC31A;
+    color: white;
+}
+
 
 
 ::-webkit-scrollbar {
@@ -32,18 +37,3 @@ footer {
 
 
 
-.conteudo-d-div {
-   padding: 30px;
-   margin: auto;
-   justify-content: center;
-   
-}
-
-.img-conteudo {
-    border-radius: 30px;
-}
-
-#capa {
- 
-    background: url(img/workspace-1280538_19200-PEQUENA.jpg);
-}
