--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ footer {
     margin-top: 60px;
 }
 
+
+.cnpj {
+    font-size: 0,5em;
+}
+
 .caixa {
     padding: 60px 0px;
     border-bottom: 1px solid #e5e5e5;
