--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 footer {
     background-color: #9DC31A;
-    color: white;
+    color: #333333;
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -13,13 +13,13 @@ footer {
 }
 
 .caixa {
-    padding: 60px 0px;
-    border-bottom: 1px solid #e5e5e5;
+    padding: 80px 0px;
+    border-bottom: 1px solid #f4faff;
 }
 
 #home {
     background: #583563;
-    color: white;
+    color: #f4faff;
 }
 
 
