--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+     
+}
+
+
 footer {
     background-color: #9DC31A;
     color: #333333;
@@ -33,4 +38,8 @@ a {
     
 }
 
+@font-face {
+    font-family: Square721 BT;
+    src: url(C:\Users\Notebook\Documents\PROGRAMAS\CorelDRAW 2020 v22.0 Portable\CorelDRAW Graphics Suite 2020 Portable\Sandbox\CorelDRAW 2020\local\meta\@WINDIR@\Fonts);
+}
 
