--- a/style.css
+++ b/style.css
@@ -38,5 +38,8 @@ a {
     
 }
 
-
+@font-face {
+    font-family: "Square721 BT";
+    src: url( <link href="https://fonts.cdnfonts.com/css/square721-bt" rel="stylesheet">);
+}
 
