--- a/style.css
+++ b/style.css
@@ -40,6 +40,6 @@ a {
 
 @font-face {
     font-family: "Square721 BT";
-    src: url( <link href="https://fonts.cdnfonts.com/css/square721-bt" rel="stylesheet">);
+    src: url( ../font);
 }
 
