--- a/style.css
+++ b/style.css
@@ -40,6 +40,6 @@ a {
 
 @font-face {
     font-family: "Square721";
-    src: url( ../font/Square721 Cn BT Roman.ttf.__meta__);
+    src: url( https://fonts.cdnfonts.com/css/square721-bt);
 }
 
