--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ a {
 
 @font-face {
     font-family: "Square721";
-    src: url( https://fonts.cdnfonts.com/css/square721-bt);
+    src: url( Square721 Cn BT Roman.ttf.__meta__);
+
+    body {
+    font-family: Square721;
+    }
 }
 
