--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 footer {
-    background-color: #9DC31A;
+    background-color: #9fff05;
     color: #333333;
     text-align: center;
     padding-top: 30px;
@@ -41,6 +41,7 @@ a {
 @font-face {
     font-family: "Square721";
     src: url( Square721 Cn BT Roman.ttf);
+    
 
 }
 
